--- a/AirMall/Main/ShrinkMenuTableViewCell.xib
+++ b/AirMall/Main/ShrinkMenuTableViewCell.xib
@@ -19,8 +19,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="50" height="67.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bhr-GW-P8h">
-                        <rect key="frame" x="10" y="19" width="30" height="30"/>
+                    <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bhr-GW-P8h">
+                        <rect key="frame" x="10" y="18" width="30" height="30"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kSl-sC-sUy">
