--- a/AirMall/Main/MainViewController.xib
+++ b/AirMall/Main/MainViewController.xib
@@ -157,7 +157,7 @@
                                 <constraint firstAttribute="height" constant="22" id="dgi-Ii-Q0J"/>
                                 <constraint firstAttribute="width" constant="22" id="hVC-gb-tpW"/>
                             </constraints>
-                            <state key="normal" image="icon-fresh.png"/>
+                            <state key="normal" image="icon-frash.png"/>
                             <connections>
                                 <action selector="frashButtomPressed:" destination="-1" eventType="touchUpInside" id="4Hf-ak-bZl"/>
                             </connections>
@@ -209,7 +209,7 @@
                                 <constraint firstAttribute="height" constant="22" id="0tI-k7-SUB"/>
                                 <constraint firstAttribute="width" constant="22" id="eVn-C4-wxT"/>
                             </constraints>
-                            <state key="normal" image="icon-fresh.png"/>
+                            <state key="normal" image="icon-syn.png"/>
                             <connections>
                                 <action selector="synButtomPressed:" destination="-1" eventType="touchUpInside" id="x7r-gY-cB7"/>
                             </connections>
@@ -308,9 +308,10 @@
     </objects>
     <resources>
         <image name="icon-back_gray.png" width="22" height="18"/>
-        <image name="icon-fresh.png" width="21" height="21"/>
+        <image name="icon-frash.png" width="24" height="22"/>
         <image name="icon-menu-more.png" width="6" height="4"/>
         <image name="icon-photo.png" width="35" height="35"/>
+        <image name="icon-syn.png" width="21" height="21"/>
         <image name="index-bg.png" width="1024" height="768"/>
     </resources>
 </document>
