--- a/AirMall/Main/MainViewController.xib
+++ b/AirMall/Main/MainViewController.xib
@@ -97,7 +97,7 @@
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="0.84313725490196079" green="0.078431372549019607" blue="0.062745098039215685" alpha="1" colorSpace="calibratedRGB"/>
                         </view>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="icon-photo.png" translatesAutoresizingMaskIntoConstraints="NO" id="WFB-KB-kNs">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="icon-userpic.png" translatesAutoresizingMaskIntoConstraints="NO" id="WFB-KB-kNs">
                             <rect key="frame" x="517" y="5" width="35" height="35"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </imageView>
@@ -310,8 +310,8 @@
         <image name="icon-back_gray.png" width="22" height="18"/>
         <image name="icon-frash.png" width="24" height="22"/>
         <image name="icon-menu-more.png" width="6" height="4"/>
-        <image name="icon-photo.png" width="35" height="35"/>
         <image name="icon-syn.png" width="21" height="21"/>
+        <image name="icon-userpic.png" width="35" height="35"/>
         <image name="index-bg.png" width="1024" height="768"/>
     </resources>
 </document>
